@@ -5,8 +5,9 @@ oar (2.0.2-1) unstable; urgency=low
   * change package version
   * change default behaviour for the cpuset_manager.pl
   * enable a user to use the same key for several jobs
+  * add node hostnames in oarstat -f
 
- -- Capit Nicolas <nicolas.capit@imag.fr>  Fri, 19 Jan 2007 16:21:01 +0100
+ -- Capit Nicolas <nicolas.capit@imag.fr>  Fri, 19 Jan 2007 21:38:43 +0100
 
 oar (2.0.1-2) unstable; urgency=low
 
